--- a/styles/home.scss
+++ b/styles/home.scss
@@ -1,5 +1,6 @@
 .home-wrapper {
   .home-up-section {
+    z-index: 1;
     font-family: "Raleway", Helvetica, Arial, Lucida, sans-serif;
     padding: 150px 0;
     background-position: bottom center;
@@ -116,6 +117,9 @@
             background-color: rgba(100, 165, 7, 0.8);
             color: #ffffff;
           }
+          &:focus-visible {
+            border: none;
+          }
         }
       }
     }
@@ -181,7 +185,7 @@
     padding-top: 75px;
     padding-bottom: 25px;
     color: #ffffff;
-    height: 400px;
+    height: 500px;
     .home-down-section-title {
       font-weight: 300;
       font-size: 30px;
