--- a/components/header/index.scss
+++ b/components/header/index.scss
@@ -28,6 +28,7 @@
       display: flex;
       align-items: center;
       font-size: 14px;
+      white-space: nowrap;
       .header-icon {
         animation-duration: 3s;
         animation-name: appearance;
