--- a/styles/contacts.scss
+++ b/styles/contacts.scss
@@ -18,15 +18,15 @@
     padding-top: 100px;
     margin-right: 60px;
     @media screen and(max-width: 920px) {
-        margin: 10px;
+      margin: 10px;
     }
     .description {
       line-height: 1.6em;
       font-size: 24px;
       margin: 24px 10px;
       @media screen and(max-width: 920px) {
-        margin:24px 0;
-    }
+        margin: 24px 0;
+      }
     }
     .information {
       background-color: #64a61d;
@@ -51,13 +51,16 @@
           color: #4e5453;
         }
         .description {
-          font-weight: 700;
-          font-size: 22px;
-          line-height: 1.5em;
-          color: #f5f6f7;
-          text-decoration: underline;
-          display: flex;
-          justify-content: flex-start;
+            font-weight: 700;
+            font-size: 22px;
+            line-height: 1.5em;
+            color: #f5f6f7;
+            text-decoration: underline;
+            display: flex;
+            justify-content: flex-start;
+            @media screen and(max-width: 375px) {
+                font-size: 18px;
+            }
         }
       }
     }
@@ -66,8 +69,8 @@
     padding: 0 100px;
     margin-top: 100px;
     @media screen and(max-width: 920px) {
-        padding: 10px;
-        margin: 40px 0;
+      padding: 10px;
+      margin: 40px 0;
     }
     .form-container-item {
       gap: 20px;
@@ -75,6 +78,12 @@
       justify-content: space-between;
       margin-bottom: 20px;
       align-items: center;
+      position: relative;
+      .error {
+        position: absolute;
+        color: red;
+        top: 40px
+      }
       input {
         font-size: 19px;
         border-width: 0;
@@ -130,8 +139,8 @@
       }
     }
     .form-button {
-        display: flex;
-        justify-content: flex-end;
+      display: flex;
+      justify-content: flex-end;
       .contact-form-buttons {
         padding: 10px 25px;
         border-radius: 20px;
@@ -145,6 +154,7 @@
           background-color: #ffffff;
           color: rgba(100, 165, 7, 0.8);
           transform: scale(1.3);
+          margin: 20px;
         }
         &:focus-visible {
           border: none;
@@ -153,7 +163,7 @@
     }
   }
   @media screen and(max-width:920px) {
-      display: block;
-      padding: 40px 0;
+    display: block;
+    padding: 40px 0;
   }
 }
