--- a/styles/home.scss
+++ b/styles/home.scss
@@ -30,11 +30,11 @@
             height: 104px;
           }
         }
-        p {
+        h1 {
           color: #ffffff;
           line-height: 1.5em;
           font-weight: 600;
-          font-size: 16px;
+          font-size: 20px;
           text-align: center;
         }
       }
@@ -44,6 +44,14 @@
       .phone-section {
         display: flex;
         gap: 3%;
+        .phone-input-section {
+          position: relative;
+          .error {
+            // position: absolute;
+            color: red;
+            font-size: 14px;
+          }
+        }
       }
       input {
         font-size: 19px;
@@ -69,6 +77,9 @@
           &::placeholder {
             color: #ffffff;
           }
+        }
+        &.error-input {
+          border: 2px solid red !important;
         }
       }
       textarea {
@@ -185,7 +196,7 @@
     padding-top: 75px;
     padding-bottom: 25px;
     color: #ffffff;
-    height: 500px;
+    height: 620px;
     .home-down-section-title {
       font-weight: 300;
       font-size: 30px;
@@ -205,7 +216,7 @@
       align-items: center;
       margin-top: 50px;
       line-height: 2em;
-      opacity: .7;
+      opacity: 0.7;
     }
     .about-us-none {
       transition: opacity 1s;
@@ -235,4 +246,14 @@
   &:hover {
     transform: scale(1.3) rotate(180deg);
   }
+}
+
+.success-submit {
+  background-color: #484850;
+  padding: 20px;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 50px 0;
 }
