--- a/styles/services.scss
+++ b/styles/services.scss
@@ -70,5 +70,8 @@
     max-width: 600px;
     font-size: 22px;
     line-height: 28px;
+    .underline-text {
+      text-decoration: underline;
+    }
   }
 }
